--- a/layouts/partials/essentials/footer.html
+++ b/layouts/partials/essentials/footer.html
@@ -14,7 +14,7 @@
           <div class="lg:col-8 lg:mt-6 mb-0 text-center lg:text-left lg:mb-0">
             <ul>
               <li class="m-3 inline-block">
-                <p class="text-text-light dark:text-darkmode-text-light text-sm">
+                <p class="text-text-light dark:text-darkmode-text-light m:text-sm">
                 <strong>Anaherix AB</strong><br/>
                 Org.nr 559540-9854<br/>
                 Masugnsvägen 86<br/>
