footer copyright fix

--- a/layouts/partials/essentials/footer.html
+++ b/layouts/partials/essentials/footer.html
@@ -65,7 +65,7 @@
     <div class="border-border dark:border-darkmode-border border-t py-7">
     <div
       class="text-text-light dark:text-darkmode-text-light container text-center">
-      <p class="text-sm">
+      <p class="m:text-sm">
         Copyright {{ dateFormat "2006" now }} &copy; Anaherix AB
       </p>
     </div>
